# CPSC312-Haskell-Project

./: ChangeLog.md  DecisionTree.hs  Main.hs  ParseCsv.hs  README.md  RandomForest.cabal  RandomForest.hs  corona_test_small.csv  package.yaml  project312.cabal
app/: DecisionTree.hs  Main.hs  ParseCsv.hs  RandomForest.hs  test-2.csv  test-3.csv
